# ura-llm-search

./: .gitignore  README.md  crawler.ipynb  data_extraction.ipynb  hello_world.ipynb  process_text.py  pyproject.toml  to_vector_store.ipynb
data/: Circulars.csv  Forum-Replies.csv  Home-Business.csv  Media-Releases.csv  Property.csv  Speeches.csv  dc_links.csv  done_dc.csv  gpt-cleaner-eval-1.csv  media_room.csv  ura_urls.csv  working_assistant_prompt.txt
data/Circulars/: COH20-01.md  COH20-02.md  COH20-03.md  COH21-01.md  Circulars.md  coh17-01.md  coh19-01.md  coh19-02.md  coh21-02.md  coh22-06.md  coh22-08.md  coh23-01.md  coh23-02.md  dc09-03.md  dc09-08.md  dc13-13.md  dc16-14.md  dc17-07.md  dc18-01.md  dc18-02.md  dc18-03.md  dc18-04.md  dc18-05.md  dc18-06.md  dc18-07.md  dc18-08.md  dc18-09.md  dc18-10.md  dc18-11.md  dc18-12.md  dc19-01.md  dc19-02.md  dc19-03.md  dc19-04.md  dc19-05.md  dc19-06.md  dc19-07.md  dc19-08.md  dc19-09.md  dc19-10.md  (+47 more)
data/DC-cleaned-md/: gross-floor-area.md
data/DC-cleaned-md/Non-Residential/: Agriculture.md  B1.md  B2.md  Business-Park.md  C-CI.md  Commercial.md  EI.md  HMC.md  Hotel.md  PW.md  SR.md  Transport.md
data/DC-cleaned-md/Residential/: Bungalows.md  Flats-Condominiums.md  Semi-Detached-Houses.md  Strata-Landed-Housing.md  Terrace.md
data/DC-cleaned-md/cleaned-combined/: Bungalows.mdx  Business-Park.mdx  Commercial.mdx  Hotel.mdx  Terrace.mdx  Transport.mdx  Transport_Facilities.mdx
data/DC-cleaned-md/gross-floor-area/: GFA.md
data/Development-Control/: gross-floor-area.html
data/Development-Control-docx/: gross-floor-area.docx
data/Media-Room/: Media-Releases.md
data/test/: jina.md
scripts/: add_metadata.py  batch_md_clean.py  convert_gif.py  convert_img_links.py  dcg_scraper.py  html_to_docx.bat  jina_batch_scrape.py  jina_test.py  markdown_cleaner.py  process_text.py  scraper-3.py
test_data/: output.md
trial_notebooks/: assistant.ipynb  change-header.ipynb  crawler.ipynb  dc_scrape.ipynb  llama-index_trial.ipynb  openai_assistant.ipynb  partition2.ipynb  to_vector_store.ipynb  unstructured.ipynb
(+2639 files in other folders)
