[tool.poetry]
name = "ura-langchain-search"
version = "0.1.0"
description = "Langchain-enabled search in Python"
authors = ["drgnfrts <nicktang10.sg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
unstructured = "^0.13.6"
cython = "^3.0.10"
requests = "^2.26.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
pycocotools = "^2.0.7"

[build-system]
requires = ["poetry-core", "cython"]
build-backend = "poetry.core.masonry.api"
