[tool.poetry]
name = "ura-langchain-search"
version = "0.1.0"
description = "Langchain-enabled search in Python"
authors = ["drgnfrts <nicktang10.sg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
unstructured = {extras = ["md"], version = "^0.14.0"}
cython = "^3.0.10"
requests = "^2.26.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
pycocotools = "^2.0.7"
llama-index = "^0.10.37"
qdrant-client = "^1.9.1"
llama-index-vector-stores-qdrant = "^0.2.8"
clip = {git = "https://github.com/openai/CLIP.git"}
llama-index-embeddings-clip = "^0.1.5"
selenium = "^4.21.0"
beautifulsoup4 = "^4.12.3"
python-docx = "^1.1.2"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core", "cython"]
build-backend = "poetry.core.masonry.api"
